Add expiration to Product and Reservation
